Updated export stuff
gradle fatjar to create jar